fix: missing whitespace after keywords Fixes #11

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -62,7 +62,7 @@ button.entity {
   background: none;
   border: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0.1em;
   font: inherit;
   color: inherit;
   text-align: inherit;
@@ -131,6 +131,10 @@ footer a {
 
 .tei-p {
   text-indent: 1em;
+  margin-bottom: 0.2rem;
+}
+
+.tei-p-no-indent {
   margin-bottom: 0.2rem;
 }
 
